@@ -63,7 +63,7 @@ public class MatsimTransformerTest {
 		VehicleType matsimType = MatsimJspritFactory.createMatsimVehicleType(jspritType);
 		assertNotNull(matsimType);
 		assertEquals("myType", matsimType.getId().toString());
-		assertEquals(50., (double) matsimType.getCapacity().getWeightInTons(), Double.MIN_VALUE);
+		assertEquals(50., matsimType.getCapacity().getWeightInTons(), Double.MIN_VALUE);
 		assertEquals(10.0, matsimType.getCostInformation().getCostsPerMeter(), 0.01);
 		assertEquals(5.0, matsimType.getCostInformation().getCostsPerSecond(), 0.01);
 		assertEquals(100.0, matsimType.getCostInformation().getFixedCosts(), 0.01);
@@ -133,8 +133,8 @@ public class MatsimTransformerTest {
 		assertEquals(10.0, service.getTimeWindow().getStart(), 0.01);
 
 		Service service2 = MatsimJspritFactory.createJspritService(carrierService, null);
-		assertTrue(service != service2);
-		assertTrue(service.equals(service2));
+		assertNotSame(service, service2);
+		assertEquals(service, service2);
 	}
 
 	@Test
@@ -153,8 +153,8 @@ public class MatsimTransformerTest {
 		assertEquals(10.0, service.getServiceStartTimeWindow().getStart(), 0.01);
 
 		CarrierService service2 = MatsimJspritFactory.createCarrierService(carrierService);
-		assertTrue(service != service2);
-		assertTrue(service.equals(service2));
+		assertNotSame(service, service2);
+		assertEquals(service, service2);
 	}
 
 	@Test
@@ -177,8 +177,8 @@ public class MatsimTransformerTest {
 		assertEquals(50, shipment.getSize().get(0));
 
 		Shipment shipment2 = MatsimJspritFactory.createJspritShipment(carrierShipment);
-		assertTrue(shipment != shipment2);
-		assertTrue(shipment.equals(shipment2));
+		assertNotSame(shipment, shipment2);
+		assertEquals(shipment, shipment2);
 	}
 
 	@Test
@@ -205,8 +205,8 @@ public class MatsimTransformerTest {
 		assertEquals(50, carrierShipment.getSize());
 
 		CarrierShipment carrierShipment2 = MatsimJspritFactory.createCarrierShipment(shipment);
-		assertTrue(carrierShipment != carrierShipment2);
-		assertTrue(carrierShipment.equals(carrierShipment2));
+		assertNotSame(carrierShipment, carrierShipment2);
+		assertEquals(carrierShipment, carrierShipment2);
 	}
 
 	@Test
@@ -228,7 +228,7 @@ public class MatsimTransformerTest {
 	}
 
 	private Collection<? extends Job> getJobsFrom(ScheduledTour sTour) {
-		Collection<Service> services = new ArrayList<Service>();
+		Collection<Service> services = new ArrayList<>();
 		for (Tour.TourElement e : sTour.getTour().getTourElements()) {
 			if (e instanceof Tour.TourActivity) {
 				if (e instanceof Tour.ServiceActivity) {
@@ -295,7 +295,7 @@ public class MatsimTransformerTest {
 		ScheduledTour sTour = getMatsimServiceTour();
 		VehicleRoutingProblem vehicleRoutingProblem = getVehicleRoutingProblem(sTour);
 		VehicleRoute route = MatsimJspritFactory.createRoute(sTour, vehicleRoutingProblem);
-		assertEquals("to1", route.getTourActivities().getActivities().get(0).getLocation().getId());
+		assertEquals("to1", route.getTourActivities().getActivities().getFirst().getLocation().getId());
 	}
 
 	@Test
@@ -308,7 +308,7 @@ public class MatsimTransformerTest {
 
 	@Test
 	void whenTransforming_matsimPlan2vehicleRouteSolution_itIsMadeCorrectly() {
-		List<ScheduledTour> sTours = new ArrayList<ScheduledTour>();
+		List<ScheduledTour> sTours = new ArrayList<>();
 		ScheduledTour matsimTour = getMatsimTour("matsimVehicle");
 		sTours.add(matsimTour);
 		ScheduledTour matsimTour1 = getMatsimTour("matsimVehicle1");
@@ -402,11 +402,6 @@ public class MatsimTransformerTest {
 	}
 
 	@Test
-	void createVehicleRoutingProblemWithServices_isMadeCorrectly() {
-		// TODO create
-	}
-
-	@Test
 	void createVehicleRoutingProblemBuilderWithServices_isMadeCorrectly() {
 		Carrier carrier = createCarrierWithServices();
         Network network = NetworkUtils.createNetwork();
@@ -423,7 +418,7 @@ public class MatsimTransformerTest {
 		assertEquals("i(6,0)", vehicle.getStartLocation().getId());
 		assertEquals(10.0, vehicle.getEarliestDeparture(), 0.0);
 		assertEquals(20.0, vehicle.getLatestArrival(), 0.0);
-		assertEquals("matsimType", vehicle.getType().getTypeId().toString());
+		assertEquals("matsimType", vehicle.getType().getTypeId());
 		assertEquals(10.0, vehicle.getType().getVehicleCostParams().perDistanceUnit, 0.0);
 		assertEquals(5.0, vehicle.getType().getVehicleCostParams().perTransportTimeUnit, 0.0);
 		assertEquals(100.0, vehicle.getType().getVehicleCostParams().fix, 0.0);
@@ -436,26 +431,21 @@ public class MatsimTransformerTest {
 		assertNotNull(jobS1);
 		assertEquals("serviceId", jobS1.getId());
 		assertEquals(20, jobS1.getSize().get(0));
-		assertTrue(jobS1 instanceof Service);
+		assertInstanceOf(Service.class, jobS1);
 		Service service1 = (Service) jobS1;
 		assertEquals(20, service1.getSize().get(0));
 		assertEquals(10.0, service1.getServiceDuration(), 0.0);
-		assertEquals("i(7,4)R", service1.getLocation().getId().toString());
+		assertEquals("i(7,4)R", service1.getLocation().getId());
 
 		Job jobS2 = vrp.getJobs().get("serviceId2");
 		assertNotNull(jobS2);
 		assertEquals("serviceId2", jobS2.getId());
 		assertEquals(10, jobS2.getSize().get(0));
-		assertTrue(jobS2 instanceof Service);
+		assertInstanceOf(Service.class, jobS2);
 		Service service2 = (Service) jobS2;
 		assertEquals(10, service2.getSize().get(0));
 		assertEquals(20.0, service2.getServiceDuration(), 0.0);
-		assertEquals("i(3,9)", service2.getLocation().getId().toString());
-	}
-
-	@Test
-	void createVehicleRoutingProblemWithShipments_isMadeCorrectly() {
-		// TODO create
+		assertEquals("i(3,9)", service2.getLocation().getId());
 	}
 
 	//	@Disabled		//Set to ignore due to not implemented functionality of Shipments in MatsimJspritFactory
@@ -476,7 +466,7 @@ public class MatsimTransformerTest {
 		assertEquals("i(6,0)", vehicle.getStartLocation().getId());
 		assertEquals(10.0, vehicle.getEarliestDeparture(), 0.0);
 		assertEquals(20.0, vehicle.getLatestArrival(), 0.0);
-		assertEquals("matsimType", vehicle.getType().getTypeId().toString());
+		assertEquals("matsimType", vehicle.getType().getTypeId());
 		assertEquals(10.0, vehicle.getType().getVehicleCostParams().perDistanceUnit, 0.0);
 		assertEquals(5.0, vehicle.getType().getVehicleCostParams().perTransportTimeUnit, 0.0);
 		assertEquals(100.0, vehicle.getType().getVehicleCostParams().fix, 0.0);
@@ -489,7 +479,7 @@ public class MatsimTransformerTest {
 		assertNotNull(jobS1);
 		assertEquals("shipment1", jobS1.getId());
 		assertEquals(10, jobS1.getSize().get(0));
-		assertTrue(jobS1 instanceof Shipment);
+		assertInstanceOf(Shipment.class, jobS1);
 		Shipment shipment1 = (Shipment) jobS1;
 		assertEquals(10, shipment1.getSize().get(0));
 		assertEquals("i(6,0)", shipment1.getPickupLocation().getId());
@@ -505,10 +495,10 @@ public class MatsimTransformerTest {
 		assertNotNull(jobS2);
 		assertEquals("shipment2", jobS2.getId());
 		assertEquals(20, jobS2.getSize().get(0));
-		assertTrue(jobS2 instanceof Shipment);
+		assertInstanceOf(Shipment.class, jobS2);
 		Shipment shipment2 = (Shipment) jobS2;
 		assertEquals(20, shipment2.getSize().get(0));
-		assertEquals("i(3,9)", shipment2.getDeliveryLocation().getId().toString());
+		assertEquals("i(3,9)", shipment2.getDeliveryLocation().getId());
 	}
 
 	private Carrier createCarrierWithServices() {
